[gd_scene load_steps=7 format=3 uid="uid://s1qekke3u7nt"]

[ext_resource type="Script" path="res://mob.gd" id="1_d5gvf"]
[ext_resource type="Texture2D" uid="uid://7271u2kkhbf1" path="res://Artwork/Test sprite.png" id="2_wfkvr"]
[ext_resource type="PackedScene" uid="uid://bv6fyy7icqkqb" path="res://health_bar.tscn" id="3_74l6n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_52nya"]
radius = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6vt1h"]
radius = 763.403

[sub_resource type="CircleShape2D" id="CircleShape2D_oam0v"]
radius = 40.7922

[node name="Mob" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_d5gvf")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_wfkvr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_52nya")

[node name="Detection" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_6vt1h")

[node name="HitBox" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_oam0v")

[node name="DamageTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="HealthBar" parent="." instance=ExtResource("3_74l6n")]
unique_name_in_owner = true
offset_left = -120.0
offset_top = -108.0
offset_right = 120.0
offset_bottom = -81.0
